fixed mobile alignment issues

--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -17,6 +17,7 @@
     height: 100%;
     flex: 50%;
     display: flex;
+    text-align: left;
     flex-direction: column;
     justify-content: center;
   }
@@ -88,6 +89,10 @@
     
     .contact .rightSide {
       flex: 100%;
+    }
+    h1 {
+        text-align: center;
+        margin-right: 10%;
     }
     
     form{
