--- a/src/styles/Menu.css
+++ b/src/styles/Menu.css
@@ -66,4 +66,7 @@
       align-items: center;
       margin-right: 50px;
     }
+    .menuTitle{
+        margin-left: 15%;
+    }
   }
